--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@storybook/addon-interactions": "^8.1.10",
     "@storybook/addon-links": "^8.1.10",
     "@storybook/addon-onboarding": "^8.1.10",
+    "@storybook/addons": "^7.6.17",
     "@storybook/blocks": "^8.1.10",
     "@storybook/preset-create-react-app": "^8.1.10",
     "@storybook/react": "^8.1.10",
@@ -67,6 +68,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/storybook__addons": "^5.2.1",
     "eslint-plugin-storybook": "^0.8.0",
     "jest-dom": "^4.0.0",
     "prop-types": "^15.8.1",
