--- a/.hintrc
+++ b/.hintrc
@@ -15,6 +15,15 @@
       {
         "select-name": "off"
       }
+    ],
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "backdrop-filter",
+          "aspect-ratio"
+        ]
+      }
     ]
   }
 }
